--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   padding: 14px 16px;
@@ -25,6 +24,10 @@
   font-style: normal;
 }
 
+.login {
+  color: white;
+}
+
 #login, #loggedin {
   text-align: center;
   font-family: "Krub", sans-serif;
@@ -34,41 +37,82 @@
 
 #login-button {
   margin: 30px;
+  padding: 12px 20px;
+  color: white;
   background-color: rgb(0, 0, 0);
   border: none;
-  border-radius: 10px;
+  border-radius: 50px;
   font-family: "TT Rounds Neue Trial", sans-serif;
   font-weight: bold;
+  font-size: 18px;
 }
 
-#loggedin img {
-  margin: 0 auto;
+#login-button:hover {
+  color: black;
+  background-color: rgb(174, 194, 85);
+}
+
+.icon-wrapper {
+  padding-left: 5px;
+}
+
+.logout {
+  display: flex;
+  justify-content: flex-end;
+  color: white;
+}
+
+#logout-button {
+  margin: 20px;
+  padding: 12px 20px;
+  color: white;
+  background-color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 50px;
+  font-family: "TT Rounds Neue Trial", sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+#logout-button:hover {
+  color: black;
+  background-color: rgb(164, 164, 164);
 }
 
 .container {
-  margin-top: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  display: flex;
 }
 
-.spotify-track-data {
-  float: right;
-  text-align: left;
-  padding: 80px;
-  font-size: 16px;
-  font-family: "Krub", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  background:rgb(204, 223, 122);
-  border-radius: 50px;
+.sub-header {
+  font-family: "TT Rounds Neue Trial", sans-serif;
+  font-weight: bold;
+  font-size: 25px;
 }
 
 .flower-visualiser {
-  float: left;
-  padding: 80px;
-  background:rgb(204, 223, 122);
-  border-radius: 50px;
+  padding: 40px 80px;
+  background: rgb(204, 223, 122);
+  border-radius: 100px;
+  order: -1;
 }
 
-.logout-button {
-  padding: 30px 15px 30px;
-  text-align: center;
+.spotify-track-data {
+  flex: 1; 
+  text-align: left;
+  padding: 40px 80px;
+  margin-left: 30px;
+  font-size: 14px;
+  font-family: "Krub", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  background: rgb(204, 223, 122);
+  border-radius: 100px;
 }
+
+.data-subtitle {
+  font-size: 12px;
+  line-height: 3px;
+}
+
