--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@
 
 #logout-button:hover {
   color: black;
-  background-color: rgb(164, 164, 164);
+  background-color: rgb(255, 255, 255);
 }
 
 .container {
@@ -98,6 +98,29 @@
   order: -1;
 }
 
+.save-button {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+}
+
+#save-button {
+  margin: 30px 0px;
+  padding: 12px 20px;
+  color: white;
+  background-color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 50px;
+  font-family: "TT Rounds Neue Trial", sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+#save-button:hover {
+  color: black;
+  background-color: rgb(255, 255, 255);
+}
+
 .spotify-track-data {
   flex: 1; 
   text-align: left;
@@ -116,3 +139,25 @@
   line-height: 3px;
 }
 
+.indicator-container {
+  position: relative;
+  width: fit-content; /* Set width to fit the content */
+}
+
+.overlay {
+  position: absolute;
+  top: 10px;
+  left: 5px;
+  width: 256px;
+  height: 20px;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.data-bind-values {
+  font-weight: bold;
+}
+
+.flower-visualiser-header {
+  padding-bottom: 30px;
+}
